package public_api

import (
	pigeomail_api_pb "github.com/requiemofthesouls/pigeomail/api/pb"
)

func (m manager) CreateTemporaryEMailV1(
	req *pigeomail_api_pb.PublicAPICreateTemporaryEMailV1Request,
	server pigeomail_api_pb.PublicAPI_CreateTemporaryEMailV1Server,
) error {
	//TODO implement me
	panic("implement me")
}
